// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-tree nested tree 1`] = `
<c-tree>
  #shadow-root(open)
    <div
      class="slds-tree_container"
    >
      <h4
        class="slds-tree__group-header"
        id="[shadow:guid]"
      >
        Sample Tree
      </h4>
      <c-tree-item
        aria-labelledby="[shadow:guid]"
        class="slds-tree"
        role="tree"
      >
        #shadow-root(open)
          <c-tree-item
            aria-disabled="false"
            aria-expanded="true"
            aria-label="Snapshot_Tree_Nested_node-5"
            aria-level="1"
            aria-selected="false"
            data-key="1"
            role="treeitem"
            tabindex="0"
          >
            #shadow-root(open)
              <div
                class="slds-tree__item"
              >
                <button
                  aria-hidden="true"
                  class="slds-button slds-button_icon slds-m-right_x-small"
                  tabindex="-1"
                  title="Collapse Tree Branch"
                  type="button"
                >
                  <c-primitive-icon>
                    #shadow-root(open)
                      <svg
                        aria-hidden="true"
                        class="slds-button__icon slds-button__icon_small"
                        data-key="chevronright"
                        focusable="false"
                      >
                        <use
                          xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#chevronright"
                        />
                      </svg>
                  </c-primitive-icon>
                  <span
                    class="slds-assistive-text"
                  >
                    Collapse Tree Branch
                  </span>
                </button>
                <span
                  class="slds-has-flexi-truncate"
                >
                  <a
                    href="javascript:void(0)"
                    role="presentation"
                    tabindex="-1"
                  >
                    <span
                      class="slds-tree__item-label slds-truncate"
                      title="Snapshot_Tree_Nested_node-5"
                    >
                      Snapshot_Tree_Nested_node-5
                    </span>
                  </a>
                </span>
              </div>
              <div
                role="group"
              >
                <c-tree-item
                  aria-disabled="false"
                  aria-level="2"
                  aria-selected="false"
                  data-key="1.1"
                  role="treeitem"
                >
                  #shadow-root(open)
                    <div
                      class="slds-tree__item"
                    >
                      <button
                        aria-hidden="true"
                        class="slds-button slds-button_icon slds-m-right_x-small slds-hidden"
                        tabindex="-1"
                        title="Collapse Tree Branch"
                        type="button"
                      >
                        <c-primitive-icon>
                          #shadow-root(open)
                            <svg
                              aria-hidden="true"
                              class="slds-button__icon slds-button__icon_small"
                              data-key="chevronright"
                              focusable="false"
                            >
                              <use
                                xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#chevronright"
                              />
                            </svg>
                        </c-primitive-icon>
                        <span
                          class="slds-assistive-text"
                        >
                          Collapse Tree Branch
                        </span>
                      </button>
                      <span
                        class="slds-has-flexi-truncate"
                      >
                        <a
                          href="javascript:void(0)"
                          role="presentation"
                          tabindex="-1"
                        >
                          <span
                            class="slds-tree__item-label slds-truncate"
                            title="Snapshot_Tree_Nested_node-8"
                          >
                            Snapshot_Tree_Nested_node-8
                          </span>
                        </a>
                      </span>
                    </div>
                    <div
                      role="group"
                    />
                </c-tree-item>
                <c-tree-item
                  aria-disabled="false"
                  aria-level="2"
                  aria-selected="false"
                  data-key="1.2"
                  role="treeitem"
                >
                  #shadow-root(open)
                    <div
                      class="slds-tree__item"
                    >
                      <button
                        aria-hidden="true"
                        class="slds-button slds-button_icon slds-m-right_x-small slds-hidden"
                        tabindex="-1"
                        title="Collapse Tree Branch"
                        type="button"
                      >
                        <c-primitive-icon>
                          #shadow-root(open)
                            <svg
                              aria-hidden="true"
                              class="slds-button__icon slds-button__icon_small"
                              data-key="chevronright"
                              focusable="false"
                            >
                              <use
                                xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#chevronright"
                              />
                            </svg>
                        </c-primitive-icon>
                        <span
                          class="slds-assistive-text"
                        >
                          Collapse Tree Branch
                        </span>
                      </button>
                      <span
                        class="slds-has-flexi-truncate"
                      >
                        <a
                          href="javascript:void(0)"
                          role="presentation"
                          tabindex="-1"
                        >
                          <span
                            class="slds-tree__item-label slds-truncate"
                            title="Snapshot_Tree_Nested_node-9"
                          >
                            Snapshot_Tree_Nested_node-9
                          </span>
                        </a>
                      </span>
                    </div>
                    <div
                      role="group"
                    />
                </c-tree-item>
                <c-tree-item
                  aria-disabled="false"
                  aria-level="2"
                  aria-selected="false"
                  data-key="1.3"
                  role="treeitem"
                >
                  #shadow-root(open)
                    <div
                      class="slds-tree__item"
                    >
                      <button
                        aria-hidden="true"
                        class="slds-button slds-button_icon slds-m-right_x-small slds-hidden"
                        tabindex="-1"
                        title="Collapse Tree Branch"
                        type="button"
                      >
                        <c-primitive-icon>
                          #shadow-root(open)
                            <svg
                              aria-hidden="true"
                              class="slds-button__icon slds-button__icon_small"
                              data-key="chevronright"
                              focusable="false"
                            >
                              <use
                                xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#chevronright"
                              />
                            </svg>
                        </c-primitive-icon>
                        <span
                          class="slds-assistive-text"
                        >
                          Collapse Tree Branch
                        </span>
                      </button>
                      <span
                        class="slds-has-flexi-truncate"
                      >
                        <a
                          href="javascript:void(0)"
                          role="presentation"
                          tabindex="-1"
                        >
                          <span
                            class="slds-tree__item-label slds-truncate"
                            title="Snapshot_Tree_Nested_node-10"
                          >
                            Snapshot_Tree_Nested_node-10
                          </span>
                        </a>
                      </span>
                    </div>
                    <div
                      role="group"
                    />
                </c-tree-item>
              </div>
          </c-tree-item>
          <c-tree-item
            aria-disabled="false"
            aria-expanded="true"
            aria-label="Snapshot_Tree_Nested_node-6"
            aria-level="1"
            aria-selected="false"
            data-key="2"
            role="treeitem"
          >
            #shadow-root(open)
              <div
                class="slds-tree__item"
              >
                <button
                  aria-hidden="true"
                  class="slds-button slds-button_icon slds-m-right_x-small"
                  tabindex="-1"
                  title="Collapse Tree Branch"
                  type="button"
                >
                  <c-primitive-icon>
                    #shadow-root(open)
                      <svg
                        aria-hidden="true"
                        class="slds-button__icon slds-button__icon_small"
                        data-key="chevronright"
                        focusable="false"
                      >
                        <use
                          xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#chevronright"
                        />
                      </svg>
                  </c-primitive-icon>
                  <span
                    class="slds-assistive-text"
                  >
                    Collapse Tree Branch
                  </span>
                </button>
                <span
                  class="slds-has-flexi-truncate"
                >
                  <a
                    href="javascript:void(0)"
                    role="presentation"
                    tabindex="-1"
                  >
                    <span
                      class="slds-tree__item-label slds-truncate"
                      title="Snapshot_Tree_Nested_node-6"
                    >
                      Snapshot_Tree_Nested_node-6
                    </span>
                  </a>
                </span>
              </div>
              <div
                role="group"
              >
                <c-tree-item
                  aria-disabled="false"
                  aria-level="2"
                  aria-selected="false"
                  data-key="2.1"
                  role="treeitem"
                >
                  #shadow-root(open)
                    <div
                      class="slds-tree__item"
                    >
                      <button
                        aria-hidden="true"
                        class="slds-button slds-button_icon slds-m-right_x-small slds-hidden"
                        tabindex="-1"
                        title="Collapse Tree Branch"
                        type="button"
                      >
                        <c-primitive-icon>
                          #shadow-root(open)
                            <svg
                              aria-hidden="true"
                              class="slds-button__icon slds-button__icon_small"
                              data-key="chevronright"
                              focusable="false"
                            >
                              <use
                                xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#chevronright"
                              />
                            </svg>
                        </c-primitive-icon>
                        <span
                          class="slds-assistive-text"
                        >
                          Collapse Tree Branch
                        </span>
                      </button>
                      <span
                        class="slds-has-flexi-truncate"
                      >
                        <a
                          href="javascript:void(0)"
                          role="presentation"
                          tabindex="-1"
                        >
                          <span
                            class="slds-tree__item-label slds-truncate"
                            title="Snapshot_Tree_Nested_node-11"
                          >
                            Snapshot_Tree_Nested_node-11
                          </span>
                        </a>
                      </span>
                    </div>
                    <div
                      role="group"
                    />
                </c-tree-item>
                <c-tree-item
                  aria-disabled="false"
                  aria-level="2"
                  aria-selected="false"
                  data-key="2.2"
                  role="treeitem"
                >
                  #shadow-root(open)
                    <div
                      class="slds-tree__item"
                    >
                      <button
                        aria-hidden="true"
                        class="slds-button slds-button_icon slds-m-right_x-small slds-hidden"
                        tabindex="-1"
                        title="Collapse Tree Branch"
                        type="button"
                      >
                        <c-primitive-icon>
                          #shadow-root(open)
                            <svg
                              aria-hidden="true"
                              class="slds-button__icon slds-button__icon_small"
                              data-key="chevronright"
                              focusable="false"
                            >
                              <use
                                xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#chevronright"
                              />
                            </svg>
                        </c-primitive-icon>
                        <span
                          class="slds-assistive-text"
                        >
                          Collapse Tree Branch
                        </span>
                      </button>
                      <span
                        class="slds-has-flexi-truncate"
                      >
                        <a
                          href="javascript:void(0)"
                          role="presentation"
                          tabindex="-1"
                        >
                          <span
                            class="slds-tree__item-label slds-truncate"
                            title="Snapshot_Tree_Nested_node-12"
                          >
                            Snapshot_Tree_Nested_node-12
                          </span>
                        </a>
                      </span>
                    </div>
                    <div
                      role="group"
                    />
                </c-tree-item>
                <c-tree-item
                  aria-disabled="false"
                  aria-level="2"
                  aria-selected="false"
                  data-key="2.3"
                  role="treeitem"
                >
                  #shadow-root(open)
                    <div
                      class="slds-tree__item"
                    >
                      <button
                        aria-hidden="true"
                        class="slds-button slds-button_icon slds-m-right_x-small slds-hidden"
                        tabindex="-1"
                        title="Collapse Tree Branch"
                        type="button"
                      >
                        <c-primitive-icon>
                          #shadow-root(open)
                            <svg
                              aria-hidden="true"
                              class="slds-button__icon slds-button__icon_small"
                              data-key="chevronright"
                              focusable="false"
                            >
                              <use
                                xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#chevronright"
                              />
                            </svg>
                        </c-primitive-icon>
                        <span
                          class="slds-assistive-text"
                        >
                          Collapse Tree Branch
                        </span>
                      </button>
                      <span
                        class="slds-has-flexi-truncate"
                      >
                        <a
                          href="javascript:void(0)"
                          role="presentation"
                          tabindex="-1"
                        >
                          <span
                            class="slds-tree__item-label slds-truncate"
                            title="Snapshot_Tree_Nested_node-13"
                          >
                            Snapshot_Tree_Nested_node-13
                          </span>
                        </a>
                      </span>
                    </div>
                    <div
                      role="group"
                    />
                </c-tree-item>
              </div>
          </c-tree-item>
          <c-tree-item
            aria-disabled="false"
            aria-expanded="true"
            aria-label="Snapshot_Tree_Nested_node-7"
            aria-level="1"
            aria-selected="false"
            data-key="3"
            role="treeitem"
          >
            #shadow-root(open)
              <div
                class="slds-tree__item"
              >
                <button
                  aria-hidden="true"
                  class="slds-button slds-button_icon slds-m-right_x-small"
                  tabindex="-1"
                  title="Collapse Tree Branch"
                  type="button"
                >
                  <c-primitive-icon>
                    #shadow-root(open)
                      <svg
                        aria-hidden="true"
                        class="slds-button__icon slds-button__icon_small"
                        data-key="chevronright"
                        focusable="false"
                      >
                        <use
                          xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#chevronright"
                        />
                      </svg>
                  </c-primitive-icon>
                  <span
                    class="slds-assistive-text"
                  >
                    Collapse Tree Branch
                  </span>
                </button>
                <span
                  class="slds-has-flexi-truncate"
                >
                  <a
                    href="javascript:void(0)"
                    role="presentation"
                    tabindex="-1"
                  >
                    <span
                      class="slds-tree__item-label slds-truncate"
                      title="Snapshot_Tree_Nested_node-7"
                    >
                      Snapshot_Tree_Nested_node-7
                    </span>
                  </a>
                </span>
              </div>
              <div
                role="group"
              >
                <c-tree-item
                  aria-disabled="false"
                  aria-level="2"
                  aria-selected="false"
                  data-key="3.1"
                  role="treeitem"
                >
                  #shadow-root(open)
                    <div
                      class="slds-tree__item"
                    >
                      <button
                        aria-hidden="true"
                        class="slds-button slds-button_icon slds-m-right_x-small slds-hidden"
                        tabindex="-1"
                        title="Collapse Tree Branch"
                        type="button"
                      >
                        <c-primitive-icon>
                          #shadow-root(open)
                            <svg
                              aria-hidden="true"
                              class="slds-button__icon slds-button__icon_small"
                              data-key="chevronright"
                              focusable="false"
                            >
                              <use
                                xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#chevronright"
                              />
                            </svg>
                        </c-primitive-icon>
                        <span
                          class="slds-assistive-text"
                        >
                          Collapse Tree Branch
                        </span>
                      </button>
                      <span
                        class="slds-has-flexi-truncate"
                      >
                        <a
                          href="javascript:void(0)"
                          role="presentation"
                          tabindex="-1"
                        >
                          <span
                            class="slds-tree__item-label slds-truncate"
                            title="Snapshot_Tree_Nested_node-14"
                          >
                            Snapshot_Tree_Nested_node-14
                          </span>
                        </a>
                      </span>
                    </div>
                    <div
                      role="group"
                    />
                </c-tree-item>
                <c-tree-item
                  aria-disabled="false"
                  aria-level="2"
                  aria-selected="false"
                  data-key="3.2"
                  role="treeitem"
                >
                  #shadow-root(open)
                    <div
                      class="slds-tree__item"
                    >
                      <button
                        aria-hidden="true"
                        class="slds-button slds-button_icon slds-m-right_x-small slds-hidden"
                        tabindex="-1"
                        title="Collapse Tree Branch"
                        type="button"
                      >
                        <c-primitive-icon>
                          #shadow-root(open)
                            <svg
                              aria-hidden="true"
                              class="slds-button__icon slds-button__icon_small"
                              data-key="chevronright"
                              focusable="false"
                            >
                              <use
                                xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#chevronright"
                              />
                            </svg>
                        </c-primitive-icon>
                        <span
                          class="slds-assistive-text"
                        >
                          Collapse Tree Branch
                        </span>
                      </button>
                      <span
                        class="slds-has-flexi-truncate"
                      >
                        <a
                          href="javascript:void(0)"
                          role="presentation"
                          tabindex="-1"
                        >
                          <span
                            class="slds-tree__item-label slds-truncate"
                            title="Snapshot_Tree_Nested_node-15"
                          >
                            Snapshot_Tree_Nested_node-15
                          </span>
                        </a>
                      </span>
                    </div>
                    <div
                      role="group"
                    />
                </c-tree-item>
                <c-tree-item
                  aria-disabled="false"
                  aria-level="2"
                  aria-selected="false"
                  data-key="3.3"
                  role="treeitem"
                >
                  #shadow-root(open)
                    <div
                      class="slds-tree__item"
                    >
                      <button
                        aria-hidden="true"
                        class="slds-button slds-button_icon slds-m-right_x-small slds-hidden"
                        tabindex="-1"
                        title="Collapse Tree Branch"
                        type="button"
                      >
                        <c-primitive-icon>
                          #shadow-root(open)
                            <svg
                              aria-hidden="true"
                              class="slds-button__icon slds-button__icon_small"
                              data-key="chevronright"
                              focusable="false"
                            >
                              <use
                                xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#chevronright"
                              />
                            </svg>
                        </c-primitive-icon>
                        <span
                          class="slds-assistive-text"
                        >
                          Collapse Tree Branch
                        </span>
                      </button>
                      <span
                        class="slds-has-flexi-truncate"
                      >
                        <a
                          href="javascript:void(0)"
                          role="presentation"
                          tabindex="-1"
                        >
                          <span
                            class="slds-tree__item-label slds-truncate"
                            title="Snapshot_Tree_Nested_node-16"
                          >
                            Snapshot_Tree_Nested_node-16
                          </span>
                        </a>
                      </span>
                    </div>
                    <div
                      role="group"
                    />
                </c-tree-item>
              </div>
          </c-tree-item>
      </c-tree-item>
    </div>
</c-tree>
`;

exports[`c-tree nested tree with metatext on nodes 1`] = `
<c-tree>
  #shadow-root(open)
    <div
      class="slds-tree_container"
    >
      <h4
        class="slds-tree__group-header"
        id="[shadow:guid]"
      >
        Sample Tree
      </h4>
      <c-tree-item
        aria-labelledby="[shadow:guid]"
        class="slds-tree"
        role="tree"
      >
        #shadow-root(open)
          <c-tree-item
            aria-disabled="false"
            aria-expanded="true"
            aria-label="Snapshot_Tree_Nested_With_Metatext_node-17"
            aria-level="1"
            aria-selected="false"
            data-key="1"
            role="treeitem"
            tabindex="0"
          >
            #shadow-root(open)
              <div
                class="slds-tree__item"
              >
                <button
                  aria-hidden="true"
                  class="slds-button slds-button_icon slds-m-right_x-small"
                  tabindex="-1"
                  title="Collapse Tree Branch"
                  type="button"
                >
                  <c-primitive-icon>
                    #shadow-root(open)
                      <svg
                        aria-hidden="true"
                        class="slds-button__icon slds-button__icon_small"
                        data-key="chevronright"
                        focusable="false"
                      >
                        <use
                          xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#chevronright"
                        />
                      </svg>
                  </c-primitive-icon>
                  <span
                    class="slds-assistive-text"
                  >
                    Collapse Tree Branch
                  </span>
                </button>
                <span
                  class="slds-has-flexi-truncate"
                >
                  <a
                    href="javascript:void(0)"
                    role="presentation"
                    tabindex="-1"
                  >
                    <span
                      class="slds-tree__item-label slds-truncate"
                      title="Snapshot_Tree_Nested_With_Metatext_node-17"
                    >
                      Snapshot_Tree_Nested_With_Metatext_node-17
                    </span>
                    <span
                      class="slds-tree__item-meta slds-truncate"
                      title="meta &middot; node-17"
                    >
                      <span
                        class="slds-assistive-text"
                      >
                        :
                      </span>
                      meta &middot; node-17
                    </span>
                  </a>
                </span>
              </div>
              <div
                role="group"
              >
                <c-tree-item
                  aria-disabled="false"
                  aria-level="2"
                  aria-selected="false"
                  data-key="1.1"
                  role="treeitem"
                >
                  #shadow-root(open)
                    <div
                      class="slds-tree__item"
                    >
                      <button
                        aria-hidden="true"
                        class="slds-button slds-button_icon slds-m-right_x-small slds-hidden"
                        tabindex="-1"
                        title="Collapse Tree Branch"
                        type="button"
                      >
                        <c-primitive-icon>
                          #shadow-root(open)
                            <svg
                              aria-hidden="true"
                              class="slds-button__icon slds-button__icon_small"
                              data-key="chevronright"
                              focusable="false"
                            >
                              <use
                                xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#chevronright"
                              />
                            </svg>
                        </c-primitive-icon>
                        <span
                          class="slds-assistive-text"
                        >
                          Collapse Tree Branch
                        </span>
                      </button>
                      <span
                        class="slds-has-flexi-truncate"
                      >
                        <a
                          href="javascript:void(0)"
                          role="presentation"
                          tabindex="-1"
                        >
                          <span
                            class="slds-tree__item-label slds-truncate"
                            title="Snapshot_Tree_Nested_With_Metatext_node-20"
                          >
                            Snapshot_Tree_Nested_With_Metatext_node-20
                          </span>
                          <span
                            class="slds-tree__item-meta slds-truncate"
                            title="meta &middot; node-20"
                          >
                            <span
                              class="slds-assistive-text"
                            >
                              :
                            </span>
                            meta &middot; node-20
                          </span>
                        </a>
                      </span>
                    </div>
                    <div
                      role="group"
                    />
                </c-tree-item>
                <c-tree-item
                  aria-disabled="false"
                  aria-level="2"
                  aria-selected="false"
                  data-key="1.2"
                  role="treeitem"
                >
                  #shadow-root(open)
                    <div
                      class="slds-tree__item"
                    >
                      <button
                        aria-hidden="true"
                        class="slds-button slds-button_icon slds-m-right_x-small slds-hidden"
                        tabindex="-1"
                        title="Collapse Tree Branch"
                        type="button"
                      >
                        <c-primitive-icon>
                          #shadow-root(open)
                            <svg
                              aria-hidden="true"
                              class="slds-button__icon slds-button__icon_small"
                              data-key="chevronright"
                              focusable="false"
                            >
                              <use
                                xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#chevronright"
                              />
                            </svg>
                        </c-primitive-icon>
                        <span
                          class="slds-assistive-text"
                        >
                          Collapse Tree Branch
                        </span>
                      </button>
                      <span
                        class="slds-has-flexi-truncate"
                      >
                        <a
                          href="javascript:void(0)"
                          role="presentation"
                          tabindex="-1"
                        >
                          <span
                            class="slds-tree__item-label slds-truncate"
                            title="Snapshot_Tree_Nested_With_Metatext_node-21"
                          >
                            Snapshot_Tree_Nested_With_Metatext_node-21
                          </span>
                          <span
                            class="slds-tree__item-meta slds-truncate"
                            title="meta &middot; node-21"
                          >
                            <span
                              class="slds-assistive-text"
                            >
                              :
                            </span>
                            meta &middot; node-21
                          </span>
                        </a>
                      </span>
                    </div>
                    <div
                      role="group"
                    />
                </c-tree-item>
                <c-tree-item
                  aria-disabled="false"
                  aria-level="2"
                  aria-selected="false"
                  data-key="1.3"
                  role="treeitem"
                >
                  #shadow-root(open)
                    <div
                      class="slds-tree__item"
                    >
                      <button
                        aria-hidden="true"
                        class="slds-button slds-button_icon slds-m-right_x-small slds-hidden"
                        tabindex="-1"
                        title="Collapse Tree Branch"
                        type="button"
                      >
                        <c-primitive-icon>
                          #shadow-root(open)
                            <svg
                              aria-hidden="true"
                              class="slds-button__icon slds-button__icon_small"
                              data-key="chevronright"
                              focusable="false"
                            >
                              <use
                                xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#chevronright"
                              />
                            </svg>
                        </c-primitive-icon>
                        <span
                          class="slds-assistive-text"
                        >
                          Collapse Tree Branch
                        </span>
                      </button>
                      <span
                        class="slds-has-flexi-truncate"
                      >
                        <a
                          href="javascript:void(0)"
                          role="presentation"
                          tabindex="-1"
                        >
                          <span
                            class="slds-tree__item-label slds-truncate"
                            title="Snapshot_Tree_Nested_With_Metatext_node-22"
                          >
                            Snapshot_Tree_Nested_With_Metatext_node-22
                          </span>
                          <span
                            class="slds-tree__item-meta slds-truncate"
                            title="meta &middot; node-22"
                          >
                            <span
                              class="slds-assistive-text"
                            >
                              :
                            </span>
                            meta &middot; node-22
                          </span>
                        </a>
                      </span>
                    </div>
                    <div
                      role="group"
                    />
                </c-tree-item>
              </div>
          </c-tree-item>
          <c-tree-item
            aria-disabled="false"
            aria-expanded="true"
            aria-label="Snapshot_Tree_Nested_With_Metatext_node-18"
            aria-level="1"
            aria-selected="false"
            data-key="2"
            role="treeitem"
          >
            #shadow-root(open)
              <div
                class="slds-tree__item"
              >
                <button
                  aria-hidden="true"
                  class="slds-button slds-button_icon slds-m-right_x-small"
                  tabindex="-1"
                  title="Collapse Tree Branch"
                  type="button"
                >
                  <c-primitive-icon>
                    #shadow-root(open)
                      <svg
                        aria-hidden="true"
                        class="slds-button__icon slds-button__icon_small"
                        data-key="chevronright"
                        focusable="false"
                      >
                        <use
                          xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#chevronright"
                        />
                      </svg>
                  </c-primitive-icon>
                  <span
                    class="slds-assistive-text"
                  >
                    Collapse Tree Branch
                  </span>
                </button>
                <span
                  class="slds-has-flexi-truncate"
                >
                  <a
                    href="javascript:void(0)"
                    role="presentation"
                    tabindex="-1"
                  >
                    <span
                      class="slds-tree__item-label slds-truncate"
                      title="Snapshot_Tree_Nested_With_Metatext_node-18"
                    >
                      Snapshot_Tree_Nested_With_Metatext_node-18
                    </span>
                    <span
                      class="slds-tree__item-meta slds-truncate"
                      title="meta &middot; node-18"
                    >
                      <span
                        class="slds-assistive-text"
                      >
                        :
                      </span>
                      meta &middot; node-18
                    </span>
                  </a>
                </span>
              </div>
              <div
                role="group"
              >
                <c-tree-item
                  aria-disabled="false"
                  aria-level="2"
                  aria-selected="false"
                  data-key="2.1"
                  role="treeitem"
                >
                  #shadow-root(open)
                    <div
                      class="slds-tree__item"
                    >
                      <button
                        aria-hidden="true"
                        class="slds-button slds-button_icon slds-m-right_x-small slds-hidden"
                        tabindex="-1"
                        title="Collapse Tree Branch"
                        type="button"
                      >
                        <c-primitive-icon>
                          #shadow-root(open)
                            <svg
                              aria-hidden="true"
                              class="slds-button__icon slds-button__icon_small"
                              data-key="chevronright"
                              focusable="false"
                            >
                              <use
                                xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#chevronright"
                              />
                            </svg>
                        </c-primitive-icon>
                        <span
                          class="slds-assistive-text"
                        >
                          Collapse Tree Branch
                        </span>
                      </button>
                      <span
                        class="slds-has-flexi-truncate"
                      >
                        <a
                          href="javascript:void(0)"
                          role="presentation"
                          tabindex="-1"
                        >
                          <span
                            class="slds-tree__item-label slds-truncate"
                            title="Snapshot_Tree_Nested_With_Metatext_node-23"
                          >
                            Snapshot_Tree_Nested_With_Metatext_node-23
                          </span>
                          <span
                            class="slds-tree__item-meta slds-truncate"
                            title="meta &middot; node-23"
                          >
                            <span
                              class="slds-assistive-text"
                            >
                              :
                            </span>
                            meta &middot; node-23
                          </span>
                        </a>
                      </span>
                    </div>
                    <div
                      role="group"
                    />
                </c-tree-item>
                <c-tree-item
                  aria-disabled="false"
                  aria-level="2"
                  aria-selected="false"
                  data-key="2.2"
                  role="treeitem"
                >
                  #shadow-root(open)
                    <div
                      class="slds-tree__item"
                    >
                      <button
                        aria-hidden="true"
                        class="slds-button slds-button_icon slds-m-right_x-small slds-hidden"
                        tabindex="-1"
                        title="Collapse Tree Branch"
                        type="button"
                      >
                        <c-primitive-icon>
                          #shadow-root(open)
                            <svg
                              aria-hidden="true"
                              class="slds-button__icon slds-button__icon_small"
                              data-key="chevronright"
                              focusable="false"
                            >
                              <use
                                xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#chevronright"
                              />
                            </svg>
                        </c-primitive-icon>
                        <span
                          class="slds-assistive-text"
                        >
                          Collapse Tree Branch
                        </span>
                      </button>
                      <span
                        class="slds-has-flexi-truncate"
                      >
                        <a
                          href="javascript:void(0)"
                          role="presentation"
                          tabindex="-1"
                        >
                          <span
                            class="slds-tree__item-label slds-truncate"
                            title="Snapshot_Tree_Nested_With_Metatext_node-24"
                          >
                            Snapshot_Tree_Nested_With_Metatext_node-24
                          </span>
                          <span
                            class="slds-tree__item-meta slds-truncate"
                            title="meta &middot; node-24"
                          >
                            <span
                              class="slds-assistive-text"
                            >
                              :
                            </span>
                            meta &middot; node-24
                          </span>
                        </a>
                      </span>
                    </div>
                    <div
                      role="group"
                    />
                </c-tree-item>
                <c-tree-item
                  aria-disabled="false"
                  aria-level="2"
                  aria-selected="false"
                  data-key="2.3"
                  role="treeitem"
                >
                  #shadow-root(open)
                    <div
                      class="slds-tree__item"
                    >
                      <button
                        aria-hidden="true"
                        class="slds-button slds-button_icon slds-m-right_x-small slds-hidden"
                        tabindex="-1"
                        title="Collapse Tree Branch"
                        type="button"
                      >
                        <c-primitive-icon>
                          #shadow-root(open)
                            <svg
                              aria-hidden="true"
                              class="slds-button__icon slds-button__icon_small"
                              data-key="chevronright"
                              focusable="false"
                            >
                              <use
                                xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#chevronright"
                              />
                            </svg>
                        </c-primitive-icon>
                        <span
                          class="slds-assistive-text"
                        >
                          Collapse Tree Branch
                        </span>
                      </button>
                      <span
                        class="slds-has-flexi-truncate"
                      >
                        <a
                          href="javascript:void(0)"
                          role="presentation"
                          tabindex="-1"
                        >
                          <span
                            class="slds-tree__item-label slds-truncate"
                            title="Snapshot_Tree_Nested_With_Metatext_node-25"
                          >
                            Snapshot_Tree_Nested_With_Metatext_node-25
                          </span>
                          <span
                            class="slds-tree__item-meta slds-truncate"
                            title="meta &middot; node-25"
                          >
                            <span
                              class="slds-assistive-text"
                            >
                              :
                            </span>
                            meta &middot; node-25
                          </span>
                        </a>
                      </span>
                    </div>
                    <div
                      role="group"
                    />
                </c-tree-item>
              </div>
          </c-tree-item>
          <c-tree-item
            aria-disabled="false"
            aria-expanded="true"
            aria-label="Snapshot_Tree_Nested_With_Metatext_node-19"
            aria-level="1"
            aria-selected="false"
            data-key="3"
            role="treeitem"
          >
            #shadow-root(open)
              <div
                class="slds-tree__item"
              >
                <button
                  aria-hidden="true"
                  class="slds-button slds-button_icon slds-m-right_x-small"
                  tabindex="-1"
                  title="Collapse Tree Branch"
                  type="button"
                >
                  <c-primitive-icon>
                    #shadow-root(open)
                      <svg
                        aria-hidden="true"
                        class="slds-button__icon slds-button__icon_small"
                        data-key="chevronright"
                        focusable="false"
                      >
                        <use
                          xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#chevronright"
                        />
                      </svg>
                  </c-primitive-icon>
                  <span
                    class="slds-assistive-text"
                  >
                    Collapse Tree Branch
                  </span>
                </button>
                <span
                  class="slds-has-flexi-truncate"
                >
                  <a
                    href="javascript:void(0)"
                    role="presentation"
                    tabindex="-1"
                  >
                    <span
                      class="slds-tree__item-label slds-truncate"
                      title="Snapshot_Tree_Nested_With_Metatext_node-19"
                    >
                      Snapshot_Tree_Nested_With_Metatext_node-19
                    </span>
                    <span
                      class="slds-tree__item-meta slds-truncate"
                      title="meta &middot; node-19"
                    >
                      <span
                        class="slds-assistive-text"
                      >
                        :
                      </span>
                      meta &middot; node-19
                    </span>
                  </a>
                </span>
              </div>
              <div
                role="group"
              >
                <c-tree-item
                  aria-disabled="false"
                  aria-level="2"
                  aria-selected="false"
                  data-key="3.1"
                  role="treeitem"
                >
                  #shadow-root(open)
                    <div
                      class="slds-tree__item"
                    >
                      <button
                        aria-hidden="true"
                        class="slds-button slds-button_icon slds-m-right_x-small slds-hidden"
                        tabindex="-1"
                        title="Collapse Tree Branch"
                        type="button"
                      >
                        <c-primitive-icon>
                          #shadow-root(open)
                            <svg
                              aria-hidden="true"
                              class="slds-button__icon slds-button__icon_small"
                              data-key="chevronright"
                              focusable="false"
                            >
                              <use
                                xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#chevronright"
                              />
                            </svg>
                        </c-primitive-icon>
                        <span
                          class="slds-assistive-text"
                        >
                          Collapse Tree Branch
                        </span>
                      </button>
                      <span
                        class="slds-has-flexi-truncate"
                      >
                        <a
                          href="javascript:void(0)"
                          role="presentation"
                          tabindex="-1"
                        >
                          <span
                            class="slds-tree__item-label slds-truncate"
                            title="Snapshot_Tree_Nested_With_Metatext_node-26"
                          >
                            Snapshot_Tree_Nested_With_Metatext_node-26
                          </span>
                          <span
                            class="slds-tree__item-meta slds-truncate"
                            title="meta &middot; node-26"
                          >
                            <span
                              class="slds-assistive-text"
                            >
                              :
                            </span>
                            meta &middot; node-26
                          </span>
                        </a>
                      </span>
                    </div>
                    <div
                      role="group"
                    />
                </c-tree-item>
                <c-tree-item
                  aria-disabled="false"
                  aria-level="2"
                  aria-selected="false"
                  data-key="3.2"
                  role="treeitem"
                >
                  #shadow-root(open)
                    <div
                      class="slds-tree__item"
                    >
                      <button
                        aria-hidden="true"
                        class="slds-button slds-button_icon slds-m-right_x-small slds-hidden"
                        tabindex="-1"
                        title="Collapse Tree Branch"
                        type="button"
                      >
                        <c-primitive-icon>
                          #shadow-root(open)
                            <svg
                              aria-hidden="true"
                              class="slds-button__icon slds-button__icon_small"
                              data-key="chevronright"
                              focusable="false"
                            >
                              <use
                                xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#chevronright"
                              />
                            </svg>
                        </c-primitive-icon>
                        <span
                          class="slds-assistive-text"
                        >
                          Collapse Tree Branch
                        </span>
                      </button>
                      <span
                        class="slds-has-flexi-truncate"
                      >
                        <a
                          href="javascript:void(0)"
                          role="presentation"
                          tabindex="-1"
                        >
                          <span
                            class="slds-tree__item-label slds-truncate"
                            title="Snapshot_Tree_Nested_With_Metatext_node-27"
                          >
                            Snapshot_Tree_Nested_With_Metatext_node-27
                          </span>
                          <span
                            class="slds-tree__item-meta slds-truncate"
                            title="meta &middot; node-27"
                          >
                            <span
                              class="slds-assistive-text"
                            >
                              :
                            </span>
                            meta &middot; node-27
                          </span>
                        </a>
                      </span>
                    </div>
                    <div
                      role="group"
                    />
                </c-tree-item>
                <c-tree-item
                  aria-disabled="false"
                  aria-level="2"
                  aria-selected="false"
                  data-key="3.3"
                  role="treeitem"
                >
                  #shadow-root(open)
                    <div
                      class="slds-tree__item"
                    >
                      <button
                        aria-hidden="true"
                        class="slds-button slds-button_icon slds-m-right_x-small slds-hidden"
                        tabindex="-1"
                        title="Collapse Tree Branch"
                        type="button"
                      >
                        <c-primitive-icon>
                          #shadow-root(open)
                            <svg
                              aria-hidden="true"
                              class="slds-button__icon slds-button__icon_small"
                              data-key="chevronright"
                              focusable="false"
                            >
                              <use
                                xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#chevronright"
                              />
                            </svg>
                        </c-primitive-icon>
                        <span
                          class="slds-assistive-text"
                        >
                          Collapse Tree Branch
                        </span>
                      </button>
                      <span
                        class="slds-has-flexi-truncate"
                      >
                        <a
                          href="javascript:void(0)"
                          role="presentation"
                          tabindex="-1"
                        >
                          <span
                            class="slds-tree__item-label slds-truncate"
                            title="Snapshot_Tree_Nested_With_Metatext_node-28"
                          >
                            Snapshot_Tree_Nested_With_Metatext_node-28
                          </span>
                          <span
                            class="slds-tree__item-meta slds-truncate"
                            title="meta &middot; node-28"
                          >
                            <span
                              class="slds-assistive-text"
                            >
                              :
                            </span>
                            meta &middot; node-28
                          </span>
                        </a>
                      </span>
                    </div>
                    <div
                      role="group"
                    />
                </c-tree-item>
              </div>
          </c-tree-item>
      </c-tree-item>
    </div>
</c-tree>
`;

exports[`c-tree simple tree 1`] = `
<c-tree>
  #shadow-root(open)
    <div
      class="slds-tree_container"
    >
      <h4
        class="slds-tree__group-header"
        id="[shadow:guid]"
      >
        Sample Tree
      </h4>
      <c-tree-item
        aria-labelledby="[shadow:guid]"
        class="slds-tree"
        role="tree"
      >
        #shadow-root(open)
          <c-tree-item
            aria-disabled="false"
            aria-level="1"
            aria-selected="false"
            data-key="1"
            role="treeitem"
            tabindex="0"
          >
            #shadow-root(open)
              <div
                class="slds-tree__item"
              >
                <button
                  aria-hidden="true"
                  class="slds-button slds-button_icon slds-m-right_x-small slds-hidden"
                  tabindex="-1"
                  title="Collapse Tree Branch"
                  type="button"
                >
                  <c-primitive-icon>
                    #shadow-root(open)
                      <svg
                        aria-hidden="true"
                        class="slds-button__icon slds-button__icon_small"
                        data-key="chevronright"
                        focusable="false"
                      >
                        <use
                          xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#chevronright"
                        />
                      </svg>
                  </c-primitive-icon>
                  <span
                    class="slds-assistive-text"
                  >
                    Collapse Tree Branch
                  </span>
                </button>
                <span
                  class="slds-has-flexi-truncate"
                >
                  <a
                    href="javascript:void(0)"
                    role="presentation"
                    tabindex="-1"
                  >
                    <span
                      class="slds-tree__item-label slds-truncate"
                      title="Snapshot_Tree_Simple_node-1"
                    >
                      Snapshot_Tree_Simple_node-1
                    </span>
                  </a>
                </span>
              </div>
              <div
                role="group"
              />
          </c-tree-item>
          <c-tree-item
            aria-disabled="false"
            aria-level="1"
            aria-selected="false"
            data-key="2"
            role="treeitem"
          >
            #shadow-root(open)
              <div
                class="slds-tree__item"
              >
                <button
                  aria-hidden="true"
                  class="slds-button slds-button_icon slds-m-right_x-small slds-hidden"
                  tabindex="-1"
                  title="Collapse Tree Branch"
                  type="button"
                >
                  <c-primitive-icon>
                    #shadow-root(open)
                      <svg
                        aria-hidden="true"
                        class="slds-button__icon slds-button__icon_small"
                        data-key="chevronright"
                        focusable="false"
                      >
                        <use
                          xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#chevronright"
                        />
                      </svg>
                  </c-primitive-icon>
                  <span
                    class="slds-assistive-text"
                  >
                    Collapse Tree Branch
                  </span>
                </button>
                <span
                  class="slds-has-flexi-truncate"
                >
                  <a
                    href="javascript:void(0)"
                    role="presentation"
                    tabindex="-1"
                  >
                    <span
                      class="slds-tree__item-label slds-truncate"
                      title="Snapshot_Tree_Simple_node-2"
                    >
                      Snapshot_Tree_Simple_node-2
                    </span>
                  </a>
                </span>
              </div>
              <div
                role="group"
              />
          </c-tree-item>
          <c-tree-item
            aria-disabled="false"
            aria-level="1"
            aria-selected="false"
            data-key="3"
            role="treeitem"
          >
            #shadow-root(open)
              <div
                class="slds-tree__item"
              >
                <button
                  aria-hidden="true"
                  class="slds-button slds-button_icon slds-m-right_x-small slds-hidden"
                  tabindex="-1"
                  title="Collapse Tree Branch"
                  type="button"
                >
                  <c-primitive-icon>
                    #shadow-root(open)
                      <svg
                        aria-hidden="true"
                        class="slds-button__icon slds-button__icon_small"
                        data-key="chevronright"
                        focusable="false"
                      >
                        <use
                          xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#chevronright"
                        />
                      </svg>
                  </c-primitive-icon>
                  <span
                    class="slds-assistive-text"
                  >
                    Collapse Tree Branch
                  </span>
                </button>
                <span
                  class="slds-has-flexi-truncate"
                >
                  <a
                    href="javascript:void(0)"
                    role="presentation"
                    tabindex="-1"
                  >
                    <span
                      class="slds-tree__item-label slds-truncate"
                      title="Snapshot_Tree_Simple_node-3"
                    >
                      Snapshot_Tree_Simple_node-3
                    </span>
                  </a>
                </span>
              </div>
              <div
                role="group"
              />
          </c-tree-item>
          <c-tree-item
            aria-disabled="false"
            aria-level="1"
            aria-selected="false"
            data-key="4"
            role="treeitem"
          >
            #shadow-root(open)
              <div
                class="slds-tree__item"
              >
                <button
                  aria-hidden="true"
                  class="slds-button slds-button_icon slds-m-right_x-small slds-hidden"
                  tabindex="-1"
                  title="Collapse Tree Branch"
                  type="button"
                >
                  <c-primitive-icon>
                    #shadow-root(open)
                      <svg
                        aria-hidden="true"
                        class="slds-button__icon slds-button__icon_small"
                        data-key="chevronright"
                        focusable="false"
                      >
                        <use
                          xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#chevronright"
                        />
                      </svg>
                  </c-primitive-icon>
                  <span
                    class="slds-assistive-text"
                  >
                    Collapse Tree Branch
                  </span>
                </button>
                <span
                  class="slds-has-flexi-truncate"
                >
                  <a
                    href="javascript:void(0)"
                    role="presentation"
                    tabindex="-1"
                  >
                    <span
                      class="slds-tree__item-label slds-truncate"
                      title="Snapshot_Tree_Simple_node-4"
                    >
                      Snapshot_Tree_Simple_node-4
                    </span>
                  </a>
                </span>
              </div>
              <div
                role="group"
              />
          </c-tree-item>
      </c-tree-item>
    </div>
</c-tree>
`;
